# assembler_ros

./: CMakeLists.txt  README.md  package.xml
src/: AssemblerROSManager.cpp  AssemblerROSManager.h  AssemblerROSPlugin.cpp  AssemblerROSPlugin.h  ScenePublisher.cpp  ScenePublisher.h  VRROSManager.cpp  VRROSManager.h  VRROSPlugin.cpp  VRROSPlugin.h
